--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "threejs-journey-exercise",
+  "name": "animated-galaxy-threejs",
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "author": "Kseniya Stoichykava <kseniya7991@gmail.com>",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
